Task5/admin-frontend-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-admin-frontend-to-admin-backend
  namespace: frontend
spec:
  podSelector:
    matchLabels:
      app: admin-frontend-app
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: backend
          podSelector:
            matchLabels:
              app: admin-backend-app
      ports:
        - protocol: TCP
          port: 3000
